--- a/internal/pages/shared/templates/layout.templ
+++ b/internal/pages/shared/templates/layout.templ
@@ -11,7 +11,7 @@ templ PageLayoutComponent(props PageLayoutProps) {
 		<div
 			class="navbar bg-base-100 shadow-sm"
 		>
-			<a class="btn btn-ghost text-xl" hx-get="/" hx-target="body" hx-push-url="true">Alec's World</a>
+			<a class="text-5xl font-brand m-3" href="/" hx-boost="true">Alec's World</a>
 		</div>
 		<div
 			class="w-full max-w-5xl p-6"
