--- a/internal/pages/shared/templates/root.templ
+++ b/internal/pages/shared/templates/root.templ
@@ -13,6 +13,10 @@ templ RootComponent(props RootProps) {
 			<link rel="icon" sizes="any" type="image/svg+xml" href="/static/favicon.svg"/>
 			<link rel="stylesheet" href="/static/main.css"/>
 			<script src="/static/htmx.min.js"></script>
+			<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+			<link rel="preconnect" href="https://fonts.googleapis.com"/>
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+			<link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Dongle&family=Lexend:wght@100..900&family=Modak&family=Moirai+One&family=Bagel+Fat+One&family=Gabarito:wght@400..900&display=swap" rel="stylesheet"/>
 		</head>
 		<body class="w-screen h-screen min-w-xs flex flex-col items-center">
 			{ children... }
