--- a/static/src/main.css
+++ b/static/src/main.css
@@ -1,2 +1,37 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+.font-brand {
+    font-family: "Modak", system-ui;
+    font-style: normal;
+}
+
+.font-moirai {
+    font-family: "Moirai One", system-ui;
+    font-style: normal;
+}
+
+.font-dongle {
+    font-family: "Dongle", system-ui;
+    font-style: normal;
+}
+
+.font-lexend {
+    font-family: "Lexend", system-ui;
+    font-style: normal;
+}
+
+.font-bagel-fat {
+    font-family: "Bagel Fat One", system-ui;
+    font-style: normal;
+}
+
+.font-gabarito {
+    font-family: "Gabarito", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+[x-cloak] {
+    display: none !important;
+}
