--- a/internal/pages/common/templates/root.templ
+++ b/internal/pages/common/templates/root.templ
@@ -16,7 +16,8 @@ templ RootComponent(props RootProps) {
 			<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 			<link rel="preconnect" href="https://fonts.googleapis.com"/>
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-			<link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Dongle&family=Lexend:wght@100..900&family=Modak&family=Moirai+One&family=Bagel+Fat+One&family=Gabarito:wght@400..900&display=swap" rel="stylesheet"/>
+			<link href="https://fonts.googleapis.com/css2?family=Modak&family=Moirai+One&family=Bagel+Fat+One&family=Gabarito:wght@400..900&display=swap" rel="stylesheet"/>
+			<script src="https://kit.fontawesome.com/03c1599055.js" crossorigin="anonymous"></script>
 		</head>
 		<body class="w-screen h-screen min-w-xs flex flex-col items-center">
 			{ children... }
