--- a/internal/pages/home/templates/home.templ
+++ b/internal/pages/home/templates/home.templ
@@ -12,41 +12,9 @@ templ HomePageComponent(props HomePageProps) {
 	@templates.RootComponent(templates.RootProps{
 		Title: utils.CreatePageTitle("Home"),
 	}) {
-		<div
-			class="navbar bg-base-100 shadow-sm"
-			hx-boost="true"
-		>
-			<div class="navbar-start">
-				<a class="text-4xl font-brand p-3 hover:hue-rotate-180" href="/home">Alec's World</a>
-			</div>
-			<div class="navbar-center">
-				<div class="flex gap-5">
-					<a href="/home" class="p-3 hover:hue-rotate-180 blur-xs skew-x-24 hover:blur-none hover:skew-x-0">Home</a>
-					<a href="/code" class="p-3 hover:hue-rotate-180">Code</a>
-					<a href="/blog" class="p-3 hover:hue-rotate-180">Blog</a>
-				</div>
-			</div>
-			<div class="navbar-end">
-				<div class="flex m-3">
-					<a
-						href="https://github.com/alecdray"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="p-3 hover:hue-rotate-180"
-					>
-						<i class="fa-brands fa-github fa-xl"></i>
-					</a>
-					<a
-						href="https://www.linkedin.com/in/draymorealec/"
-						target="_blank"
-						rel="noopener noreferrer"
-						class="p-3 hover:hue-rotate-180"
-					>
-						<i class="fa-brands fa-linkedin fa-xl"></i>
-					</a>
-				</div>
-			</div>
-		</div>
+		@templates.NavBarComponent(templates.NaveBarProps{
+			ActivePage: templates.HomePage,
+		})
 		<div
 			class="w-full max-w-5xl p-6"
 		>
